# tensorflow-memory-course

./: .gitignore  404.html  AGENTS.md  COURSE_FACTORY_SPEC.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
course/: INSTRUCTIONAL_DESIGN_GUIDE.md  QUALITY_GATE_MATRIX.md  TEAM_RUNBOOK.md  course.yaml  progress.yaml  research_gaps.md
docs/: glossary.md  index.md  references.md  syllabus.md
examples/: data_cleaning_missing_values.py  duplicates_types_outliers.py
exercises/: categorical-encoding-scaling.md  data-cleaning-01-missing-values.md  data-cleaning-01-missing-values_starter.py  data-leakage.md  derivatives-gradients-chain-rule.md  duplicates-types-outliers.md  duplicates-types-outliers_starter.py  evaluation-calibration.md  model-fit-under-the-hood.md  perceptron-dense-layer.md  probability-loss-functions.md  python-numpy-refresh.md  regularization-dropout.md  tfdata-basics.md  tokenization-vocabulary.md  train-validation-test.md  vectors-matrices-tensors.md
glossary/: index.html
modules/: index.html
notebooks/: consolidato-memoria-lezioni-01-15.ipynb  data-cleaning-01-missing-values.ipynb  duplicates-types-outliers.ipynb  lezione-01-dati-mancanti.ipynb  lezione-02-duplicati-tipi-outlier.ipynb  lezione-03-train-validation-test.ipynb  lezione-04-data-leakage.ipynb  lezione-05-encoding-scaling.ipynb  lezione-06-numpy.ipynb  lezione-07-tensori.ipynb  lezione-08-gradienti.ipynb  lezione-09-loss.ipynb  lezione-10-prima-rete-neurale.ipynb  lezione-11-dentro-il-training.ipynb  lezione-12-overfitting.ipynb  lezione-13-valutare-un-classificatore.ipynb  lezione-14-tf-data.ipynb  (+46 more)
(+258 files in other folders)
