[project]
name = "tensorflow-memory-ai-course"
version = "0.1.0"
description = "Executable microlearning course and Memory AI Lab"
requires-python = ">=3.11,<3.13"
dependencies = [
  "tensorflow",
  "keras",
  "keras-hub",
  "pandas",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "networkx",
  "jupyter",
  "nbclient",
  "nbformat",
  "mkdocs",
  "mkdocs-material",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "nbqa",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
