[project]
name = "tensorflow-memory-ai-course"
version = "0.1.0"
description = "Executable microlearning course and Memory AI Lab"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "nbclient",
  "nbformat",
  "ipykernel",
  "mkdocs",
  "mkdocs-material",
  "pyyaml",
]

[project.optional-dependencies]
ml = [
  "tensorflow",
  "keras",
  "keras-hub",
  "networkx",
]

dev = [
  "pytest",
  "ruff",
  "mypy",
  "pandas-stubs",
  "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_ai"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/exercises"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true
